Updated Project + description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </h2>
 
                                 <div class="underline"></div>
-                                <a href="#aboutUs" class="read_more2">Who Am I</a>
+                                <a href="#aboutUs" class="read_more2">Who AM I</a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +155,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </div>
                                 <!-- /.col-md-6 -->
                                 <div class="col-md-6">
-                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.</h3>
+                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada</h3>
                                     <p>
                                         On the journey towards Statistics minor and AI specification, my passions and interests always lead me engaging in new technologies, like cloud computing and machine learning.
                                     </p>
@@ -266,8 +266,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="section-title">
                 <h2>Projects</h2>
                 <h6>Necessity is the mother of invention</h6>
-            </div>
-            <!--/Title -->
+            </div>        
         </div>
         <!-- Container -->
 
@@ -304,7 +303,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </li>
                     <li>
                         <a class="" href="#" data-filter=".RL">
-                            <h5>Rienforcement Learning</h5>
+                            <h5>Reinforcement Learning</h5>
                         </a>
                     </li>
                 </ul>
@@ -312,48 +311,19 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <!--/Portfolio Filters -->
 
             <!-- Portfolio Wrapper -->
-            <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px" id="portfolio_wrapper">
+            <div class="isotope fadeInLeft animated wow grid" id="portfolio_wrapper">
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four RL isotope-item effect-oscar">
+                <figure class="portfolio-item one-four RL isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/deepracer.png" alt="Portfolio 1" width="337" height="600" />
+                        <img src="img/deepracer.png" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
                             <a href="https://github.com/codejedi-ai/Deepracer" class="fancybox">
-                                <h2>DEEP <span>RACER</span></h2>
-                                <p>1/18 scale racecar</p>
-                            </a>
-                        </div>
-                    </figcaption>
-                </figure>
-                <!--/Portfolio Item -->
-
-                <!-- Portfolio Item-->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four ML isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/chatbot.png" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
-                                <h2>Chat <span>Bot</span></h2>
+                                <h2>DeepRacer<span></span></h2>
                                 <p>
-                                    intent baised chatbot
+                                    1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and AWS Sagemaker for reward function and hyper-performance,
+implemented the K1999 algorithm
                                 </p>
                             </a>
                         </div>
@@ -361,15 +331,24 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
 
+                <!-- Portfolio Item-->
+                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
+                    <div class="portfolio_img">
+                        <img src="img/chatbot.png" alt="Portfolio 1" />
+                    </div>
+                    <figcaption>
+                        <div>
+                            <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
+                                <h2>Chat <span>Bot</span></h2>
+                                <p> intent baised chatbot                                </p>
+                            </a>
+                        </div>
+                    </figcaption>
+                </figure>
+                <!--/Portfolio Item -->
+
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/covid.jpeg" alt="Portfolio 1" />
                     </div>
@@ -388,14 +367,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
 
                 <!-- Portfolio Item-->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four android AWS web isotope-item effect-oscar">
+                <figure class="portfolio-item one-four android AWS web isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/wildryde.jpeg" alt="wildryde" />
                     </div>
@@ -412,14 +384,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!-- Portfolio Item -->
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four AWS isotope-item effect-oscar">
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/trendone.jpeg" alt="Portfolio 1" />
                     </div>
@@ -437,14 +402,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <!--/Portfolio Item -->
 
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/handwrightingrecognization.jpeg" alt="Portfolio 1" />
                     </div>
@@ -453,7 +411,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <a href="img/handwrightingrecognization.jpeg" class="fancybox">
                                 <h2>DevSecOps </h2>
                                 <p>
-                                    Handwriting classification
+                                    
                                 </p>
                             </a>
                         </div>
@@ -462,14 +420,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <!--/Portfolio Item -->
 
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four AWS isotope-item effect-oscar">
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/devmlops.png" alt="Portfolio 1" />
                     </div>
@@ -486,14 +437,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
                 <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/realestate.jpeg" alt="Portfolio 1" />
                     </div>
@@ -509,6 +453,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
+           
             </div>
             <!--/Portfolio Wrapper -->
         </div>
@@ -530,7 +475,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <div class="contact_section">
                     <h2>Get In Touch</h2>
                     <h6>
-                        <h3><a href="https://www.linkedin.com/in/codejediatuw/">Let's linked in</i></a></h3>
+                        <h3><a href="https://www.linkedin.com/in/codejediatuw/">Let's Linked in</i></a></h3>
                     </h6>
                 </div>
             </section>
