--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="section-title">
                 <h2>Projects</h2>
                 <h6>Necessity is the mother of invention</h6>
-            </div>        
+            </div>
         </div>
         <!-- Container -->
 
@@ -322,8 +322,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <a href="https://github.com/codejedi-ai/Deepracer" class="fancybox">
                                 <h2>DeepRacer<span></span></h2>
                                 <p>
-                                    1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and AWS Sagemaker for reward function and hyper-performance,
-implemented the K1999 algorithm
+                                    1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and AWS Sagemaker for reward function and hyper-performance, implemented the K1999 algorithm
                                 </p>
                             </a>
                         </div>
@@ -340,7 +339,7 @@ implemented the K1999 algorithm
                         <div>
                             <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
                                 <h2>Chat <span>Bot</span></h2>
-                                <p> intent baised chatbot                                </p>
+                                <p> intent baised chatbot </p>
                             </a>
                         </div>
                     </figcaption>
@@ -369,7 +368,7 @@ implemented the K1999 algorithm
                 <!-- Portfolio Item-->
                 <figure class="portfolio-item one-four android AWS web isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/wildryde.jpeg" alt="wildryde" />
+                        <img src="img/wildryde.png" alt="wildryde" />
                     </div>
                     <figcaption>
                         <div>
@@ -411,7 +410,7 @@ implemented the K1999 algorithm
                             <a href="img/handwrightingrecognization.jpeg" class="fancybox">
                                 <h2>DevSecOps </h2>
                                 <p>
-                                    
+
                                 </p>
                             </a>
                         </div>
@@ -453,7 +452,7 @@ implemented the K1999 algorithm
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-           
+
             </div>
             <!--/Portfolio Wrapper -->
         </div>
