--- a/index.html
+++ b/index.html
@@ -277,28 +277,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div id="filters" class="sixteen columns">
                 <ul class="clearfix">
                     <li>
-                        <a id="all" href="#" data-filter="*" class="active">
-                            <h5>All</h5>
-                        </a>
-                    </li>
-                    <li>
                         <a class="" href="#" data-filter=".AWS">
                             <h5>AWS workshop</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#" data-filter=".XCode">
-                            <h5>XCode</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#" data-filter=".python">
-                            <h5>python</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#" data-filter=".ML">
-                            <h5>Machine Learning</h5>
                         </a>
                     </li>
                     <li>
@@ -306,6 +286,36 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <h5>Reinforcement Learning</h5>
                         </a>
                     </li>
+                    <li>
+                        <a class="" href="#" data-filter=".Python">
+                            <h5>Python</h5>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="#" data-filter=".DA">
+                            <h5>Data Analysis</h5>
+                        </a>
+                    </li>
+                    <!--
+                    <li>
+                        <a class="" href="#" data-filter=".XCode">
+                            <h5>XCode</h5>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="#" data-filter=".RL">
+                            <h5>Reinforcement Learning</h5>
+                        </a>
+                    </li>
+                    -->
+                    <li>
+                        <a id="all" href="#" data-filter="*" class="active">
+                            <h5>All</h5>
+                        </a>
+                    </li>
+                    <li>
+
+
                 </ul>
             </div>
             <!--/Portfolio Filters -->
@@ -323,6 +333,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <h2>DeepRacer<span></span></h2>
                                 <p>
                                     1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and AWS Sagemaker for reward function and hyper-performance, implemented the K1999 algorithm
+
                                 </p>
                             </a>
                         </div>
@@ -331,22 +342,22 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <!--/Portfolio Item -->
 
                 <!-- Portfolio Item-->
-                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four Python isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/chatbot.png" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
                             <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
-                                <h2>Chat <span>Bot</span></h2>
-                                <p> intent baised chatbot </p>
+                                <h2>Discord chatbot <span></span></h2>
+                                <p> Developed with Python, utilized Tensorflow to construct a deeplearning neural network and used bag of words for trainning, created intents can be used by the bot to determine the goal of communication </p>
                             </a>
                         </div>
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
 
-                <!-- Portfolio Item -->
+                <!-- Portfolio Item 
                 <figure class="portfolio-item one-four ML isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/covid.jpeg" alt="Portfolio 1" />
@@ -362,20 +373,21 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                     </figcaption>
                 </figure>
+-->
                 <!--/Portfolio Item-->
 
 
                 <!-- Portfolio Item-->
-                <figure class="portfolio-item one-four android AWS web isotope-item effect-oscar">
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/wildryde.png" alt="wildryde" />
+                        <img src="img/wildrydes-architecture.jpeg" alt="wildryde" />
                     </div>
                     <figcaption>
                         <div>
                             <a href="pdfs/WildRydeReport.pdf" class="nav-link">
-                                <h2>WILD <span>RYDE</span></h2>
+                                <h2>Wild Rydes <span></span></h2>
                                 <p>
-                                    SERVERLESS!!!!
+                                    SERVERLESS! Perform version control in the deployment code of static webpage, used AWS amplify to host the static webpage frontend and DynamoDB hold user data. Utilized tools: Codecommit, DynamoDB, Amplify, AWS CLI, AWS API gateway, Cognito
                                 </p>
                             </a>
                         </div>
@@ -385,14 +397,14 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/trendone.jpeg" alt="Portfolio 1" />
+                        <img src="img/TrendMicroControlPanel.png" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
                             <a href="pdfs/DevSecOpsReport.pdf" class="nav-link">
                                 <h2>Trend Micro One</h2>
-                                <p>
-                                    Security + DevOps
+                                <p> Security + DevOps. Used Trend Micro to add security checks and block targeted attacks on the site. It can visualise attacks in the cloud infrastructure.
+
                                 </p>
                             </a>
                         </div>
@@ -401,13 +413,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <!--/Portfolio Item -->
 
                 <!-- Portfolio Item -->
-                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/handwrightingrecognization.jpeg" alt="Portfolio 1" />
+                        <img src="img/DevSecOps.JPG" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
-                            <a href="img/handwrightingrecognization.jpeg" class="fancybox">
+                            <a href="" class="fancybox">
                                 <h2>DevSecOps </h2>
                                 <p>
 
@@ -418,7 +430,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
 
-                <!-- Portfolio Item -->
+                <!-- Portfolio Item 
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/devmlops.png" alt="Portfolio 1" />
@@ -434,9 +446,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                     </figcaption>
                 </figure>
+-->
                 <!--/Portfolio Item -->
+
                 <!-- Portfolio Item -->
-                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
+                <figure class="portfolio-item one-four DA isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/realestate.jpeg" alt="Portfolio 1" />
                     </div>
@@ -445,7 +459,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <a href="https://github.com/codejedi-ai/Boston-House-Price-Analysis" class="nav-link">
                                 <h2>RealEstate</h2>
                                 <p>
-                                    Performing linear regression on housing data
+                                    Performing linear regression on housing data. Used Pandas to grab data and used Seaborn to visualize, used Scikit learn to make machine learning model
                                 </p>
                             </a>
                         </div>
