WS Certified DevOps Engineer

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <nav class="navbar navbar-inverse" role="navigation">
                     <div class="navbar-header">
                         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span> <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span> <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     </div>
                     <div id="main-nav" class="collapse navbar-collapse navStyle">
                         <ul class="nav navbar-nav" id="mainNav">
@@ -155,7 +155,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </div>
                                 <!-- /.col-md-6 -->
                                 <div class="col-md-6">
-                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada</h3>
+                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada
+                                    </h3>
                                     <p>
                                         On the journey towards Statistics minor and AI specification, my passions and interests always lead me engaging in new technologies, like cloud computing and machine learning.
                                     </p>
@@ -230,28 +231,31 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             </p>
                         </div>
                     </div>
+
                     <div class="col-md-3">
                         <div class="skills_icon icon3 delay-03s animated wow zoomIn">
                             <span></span>
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">AWS Certified Machine Learning - Speciality</h3>
-                            <p class="animated fadeInDown wow">
-                                By end of 2022
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="skills_icon icon3 delay-03s animated wow zoomIn">
-                            <span></span>
-                        </div>
-                        <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">Next Step</h3>
+                            <h3 class="animated fadeInUp wow">AWS Certified DevOps Engineer</h3>
                             <p class="animated fadeInDown wow">
                                 ?
                             </p>
                         </div>
                     </div>
+
+                    <div class="col-md-3">
+                        <div class="skills_icon icon3 delay-03s animated wow zoomIn">
+                            <span></span>
+                        </div>
+                        <div class="skills_block">
+                            <h3 class="animated fadeInUp wow">AWS Certified Machine Learning Speciality</h3>
+                            <p class="animated fadeInDown wow">
+                                ?
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -496,8 +500,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <div class="container">
             <div class="footer_bottom">
                 <span>Copyright © 2015, Template by
-          <a href="http://webthemez.com">WebThemez.com</a>.
-        </span>
+                    <a href="http://webthemez.com">WebThemez.com</a>.
+                </span>
             </div>
         </div>
     </footer>
