Carta Work experiance introduciton

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
                                     <ul class="about-us-list">
                                         <li class="points">
-                                            Programming languages: C, C++, c#, Java, R and Python
+                                            Programming languages: C, C++, C#, Java, R and Python
                                         </li>
                                         <li class="points">
                                             Developer Tools: Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio, VSCode, Code Blocks, Robot Framework
@@ -338,7 +338,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     <ul class="timeline-panel-ul">
                         <li><span class="importo">?</span></li>
                         <li><span class="causale"><img src="img/diamond.gif"> </span> </li>
-                        <li><p><small class="text-muted"> Jan.~ Apr., 2023 ( 4 Months )</small></p> </li>
+                        <li><p><small class="text-muted"> Jan.~ Apr., 2023 (4 Months)</small></p> </li>
                     </ul>
                 </div>
 
@@ -360,9 +360,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-sm-offset-1 col-sm-11">
                 <div class="timeline-panel debits">
                     <ul class="timeline-panel-ul">
-                        <li><span class="importo">Site Reliability Engineering Co-op</span></li>
+                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
                         <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/about"> Carta Maple Technologies Inc.| Waterloo, ON, Canada </a></span> </li>
-                        <li><p><small class="text-muted"> May ~ Aug., 2022 (`4 months )</small></p> </li>
+                        <li><p><small class="text-muted"> May.2 ~ Aug.26, 2022 (4 Months)</small></p> </li>
                     </ul>
                 </div>
 
@@ -417,7 +417,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                        
                         <li><span class="importo">Software Development Co-op Student (Remote)</span></li>
                         <li><span class="causale"><img src="img/diamond.gif"><a href="https://www.virtamove.com/about-us"> VirtaMove Corp.,| Ottawa, ON, Canada </a> </span></li>
-                        <li><p><small class="text-muted"> May. ~ Aug., 2021 ( 4 Months )</small></p> </li>
+                        <li><p><small class="text-muted"> May.6 ~ Aug.27, 2021 (4 Months)</small></p> </li>
                     </ul>
                 </div>
                          
