Reliability Engineering Intern
Changed  Reliability Engineer Intern into Reliability Engineering Intern

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-sm-offset-1 col-sm-11">
                 <div class="timeline-panel debits">
                     <ul class="timeline-panel-ul">
-                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
+                        <li><span class="importo">Site Reliability Engineering Intern</span></li>
                         <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/about"> Carta Maple Technologies Inc.| Waterloo, ON, Canada </a></span> </li>
                         <li><p><small class="text-muted"> May.2 ~ Aug.26, 2022 (4 Months)</small></p> </li>
                     </ul>
