OANDA link added

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-sm-11">
                 <div class="timeline-panel credits">
                     <ul class="timeline-panel-ul">
-                        <li><span class="importo">OANDA (Canada) Corporation ULC - Divisional Office</span></li>
-                        <li><span class="causale"><img src="img/diamond.gif"> </span> </li>
+                        <li><span class="importo">Site Reliability Engineering Intern</span></li>
+                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/about">OANDA (Canada) Corporation ULC - Divisional Office.| Toronto, ON, Canada </a></span> </li>
                         <li><p><small class="text-muted"> Jan.~ Apr., 2023 (4 Months)</small></p> </li>
                     </ul>
                 </div>
