--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <span></span>
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">AWS Certified DevOps Engineer</h3>
+                            <h3 class="animated fadeInUp wow">?</h3>
                             <p class="animated fadeInDown wow">
-                                ?
+                                
                             </p>
                         </div>
                     </div>
@@ -244,9 +244,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <span></span>
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">AWS Certified Machine Learning - Speciality</h3>
+                            <h3 class="animated fadeInUp wow">?</h3>
                             <p class="animated fadeInDown wow">
-                                ?
+                                
                             </p>
                         </div>
                     </div>
@@ -336,9 +336,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-sm-11">
                 <div class="timeline-panel credits">
                     <ul class="timeline-panel-ul">
-                        <li><span class="importo">Site Reliability Engineering Intern</span></li>
-                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/about">OANDA (Canada) Corporation ULC - Divisional Office.| Toronto, ON, Canada </a></span> </li>
-                        <li><p><small class="text-muted"> Jan.~ Apr., 2023 (4 Months)</small></p> </li>
+                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
+                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://oanda.com/ca-en/">OANDA (Canada) Corporation| Toronto, ON, Canada </a></span> </li>
+                        <li><p><small class="text-muted"> Jan.9 ~ Apr.21, 2023 (4 Months)</small></p> </li>
                     </ul>
                 </div>
 
@@ -360,8 +360,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="col-sm-offset-1 col-sm-11">
                 <div class="timeline-panel debits">
                     <ul class="timeline-panel-ul">
-                        <li><span class="importo">Site Reliability Engineering Intern</span></li>
-                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/about"> Carta Maple Technologies Inc.| Waterloo, ON, Canada </a></span> </li>
+                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
+                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://carta.com/"> Carta Maple Technologies Inc.| Waterloo, ON, Canada </a></span> </li>
                         <li><p><small class="text-muted"> May.2 ~ Aug.26, 2022 (4 Months)</small></p> </li>
                     </ul>
                 </div>
