--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     <ul class="timeline-panel-ul">
                                         <!---->
                                         <li><span class="importo">?</span></li>
-                                        <li><span class="causale"><img src=""><a
-                                                    href=""> ? </a></span> </li>
+                                        <li><span class="causale"><img src="img/diamond.gif"><a
+                                                    href="">  </a></span> </li>
                                         <li>
                                             <p><small class="text-muted"> Sep.5 ~ Dec.22, 2023 (4 Months)</small></p>
                                         </li>
