Added 2024 and tensorflow developer cert aspirations

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                             Database: PostgreSQL, MySQL, Aurora, MongoDB, DynamoDB
                                         </li>
                                         <li class="points">
-                                            Cloud: AWS, Azure
+                                            Cloud: AWS, GCP
                                         </li>
                                     </ul>
                                     <!-- /.about-us-list -->
